add signing jars

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -31,19 +31,26 @@ jobs:
       - name: Build APK and AAB with Gradle
         run: ./gradlew assembleRelease bundleRelease
 
+      - name: Create keystore file
+        run: |
+          echo ${{ secrets.KEYSTORE_FILE }} | base64 -d > keystore.jks
+
+
+      - name: Sign APK
+        run: |
+          jarsigner -keystore keystore.jks -storepass ${{ secrets.STORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} -signedjar app/build/outputs/apk/release/app-release-signed.apk app/build/outputs/apk/release/app-release-unsigned.apk ${{ secrets.KEY_ALIAS }}
+
+      - name: Sign AAB
+        run: |
+          jarsigner -keystore keystore.jks -storepass ${{ secrets.STORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} -signedjar app/build/outputs/bundle/release/app-release-signed.aab app/build/outputs/bundle/release/app-release.aab ${{ secrets.KEY_ALIAS }}
+
       - name: Rename APK and AAB
         run: |
           mv app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/app-release-${{ env.version_name }}-${{ env.version_code }}-unsigned.apk
           mv app/build/outputs/bundle/release/app-release.aab app/build/outputs/bundle/release/app-release-${{ env.version_name }}-${{ env.version_code }}.aab
 
-      - name: Upload APK
+      - name: Upload artefacts
         uses: actions/upload-artifact@v3.1.2
         with:
-          name: apk
-          path: app/build/outputs/apk/release/*-unsigned.apk
-
-      - name: Upload AAB
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: aab
-          path: app/build/outputs/bundle/release/*.aab
+          name: outputs
+          path: app/build/outputs/
