--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -49,8 +49,8 @@ jobs:
           jarsigner -keystore keystore.jks\
           -storepass ${{ secrets.STORE_PASSWORD }} \
           -keypass ${{ secrets.KEY_PASSWORD }} \
-          -signedjar app/build/outputs/bundle/release/app-release.aab \
-          app/build/outputs/bundle/release/app-release-signed.aab ${{ secrets.KEY_ALIAS_AAB }}
+          -signedjar "app/build/outputs/bundle/release/app-release.aab" \
+          "app/build/outputs/bundle/release/app-release-signed.aab" ${{ secrets.KEY_ALIAS_AAB }}
 
       - name: Rename APK and AAB
         run: |
