--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -3,9 +3,27 @@ name: Builds Android apk and aab
 on:
   push:
     branches:
-      - master
+      - '*'
 
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.5.2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Install dependencies
+        run: ./gradlew dependencies --no-daemon
+
+      - name: Run Unit Tests
+        run: ./gradlew testDebugUnitTest --no-daemon
   build:
     runs-on: ubuntu-latest
 
@@ -29,33 +47,32 @@ jobs:
           echo "version_name=$(./gradlew -q printVersionName)" >> $GITHUB_ENV
 
       - name: Build APK and AAB with Gradle
-        run: ./gradlew assembleRelease bundleRelease
+        run: ./gradlew assembleDebug bundleDebug
 
       - name: Create keystore file
         run: |
           echo ${{ secrets.KEYSTORE_FILE }} | base64 -d > keystore.jks
-
 
       - name: Sign APK
         run: |
           jarsigner -keystore keystore.jks \
           -storepass ${{ secrets.STORE_PASSWORD }} \
           -keypass ${{ secrets.KEY_PASSWORD }} \
-          -signedjar app/build/outputs/apk/release/app-release-signed.apk \
-          app/build/outputs/apk/release/app-release-unsigned.apk ${{ secrets.KEY_ALIAS }}
+          -signedjar app/build/outputs/apk/debug/app-debug-signed.apk \
+          app/build/outputs/apk/debug/app-debug.apk ${{ secrets.KEY_ALIAS }}
 
       - name: Sign AAB
         run: |
           jarsigner -keystore keystore.jks \
           -storepass ${{ secrets.STORE_PASSWORD }} \
           -keypass ${{ secrets.KEY_PASSWORD }} \
-          -signedjar app/build/outputs/bundle/release/app-release-signed.aab \
-          app/build/outputs/bundle/release/app-release.aab ${{ secrets.KEY_ALIAS }}
+          -signedjar app/build/outputs/bundle/debug/app-debug-signed.aab \
+          app/build/outputs/bundle/debug/app-debug.aab ${{ secrets.KEY_ALIAS }}
 
       - name: Rename APK and AAB
         run: |
-          mv app/build/outputs/apk/release/app-release-signed.apk app/build/outputs/apk/release/app-release-${{ env.version_name }}-${{ env.version_code }}.apk
-          mv app/build/outputs/bundle/release/app-release-signed.aab app/build/outputs/bundle/release/app-release-${{ env.version_name }}-${{ env.version_code }}.aab
+          mv app/build/outputs/apk/debug/app-debug-signed.apk app/build/outputs/apk/debug/app-debug-${{ env.version_name }}-${{ env.version_code }}.apk
+          mv app/build/outputs/bundle/debug/app-debug-signed.aab app/build/outputs/bundle/debug/app-debug-${{ env.version_name }}-${{ env.version_code }}.aab
 
       - name: Upload artefacts
         uses: actions/upload-artifact@v3.1.2
