--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -14,17 +14,17 @@ jobs:
         uses: actions/checkout@v3.5.2
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3.11.0
         with:
           java-version: '17'
           distribution: 'adopt'
-
-      - name: Install dependencies
-        run: ./gradlew dependencies --no-daemon
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Run Unit Tests
         run: ./gradlew testDebugUnitTest --no-daemon
   build:
+    needs: tests
     runs-on: ubuntu-latest
 
     steps:
