--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -23,6 +23,12 @@ jobs:
 
       - name: Run Unit Tests
         run: ./gradlew testDebugUnitTest --no-daemon
+
+      - name: Publish Unit Test Report
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: Unit Test Report
+          path: app/build/reports/tests/testDebugUnitTest
   build:
     needs: tests
     runs-on: ubuntu-latest
