--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -24,11 +24,20 @@ jobs:
       - name: Run Unit Tests
         run: ./gradlew testDebugUnitTest --no-daemon
 
-      - name: Publish Unit Test Report
-        uses: actions/upload-artifact@v3.1.2
+      - name: Copy Test Report HTML files to gh-pages branch
+        uses: actions/checkout@v3
         with:
-          name: Unit Test Report
-          path: app/build/reports/tests/testDebugUnitTest
+          ref: gh-pages
+      - name: Move Test Report HTML files
+        run: |
+          mkdir -p test-report
+          cp -R app/build/reports/tests/testDebugUnitTest/* test-report/${{ github.run_number }}/
+      - name: Commit and Push changes
+        run: |
+          git add test-report
+          git commit -m "Update test report"
+          git push origin gh-pages
+
   build:
     needs: tests
     runs-on: ubuntu-latest
