--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Run Unit Tests
         run: ./gradlew testDebugUnitTest --no-daemon
 
+      - name: Move Test Report HTML files
+        run: |
+          mkdir -p $HOME/test-reports
+          mv -R app/build/reports/tests/testDebugUnitTest/* $HOME/test-reports
+
       - name: Copy Test Report HTML files to gh-pages branch
         uses: actions/checkout@v3
         with:
@@ -31,7 +36,7 @@ jobs:
       - name: Move Test Report HTML files
         run: |
           mkdir -p doc/${{ github.run_number }}/
-          cp -R app/build/reports/tests/testDebugUnitTest/* doc/${{ github.run_number }}/
+          cp -R $HOME/test-reports/* doc/${{ github.run_number }}/
       - name: Commit and Push changes
         run: |
           git add test-report
