--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
@@ -27,7 +28,7 @@ jobs:
       - name: Move Test Report HTML files
         run: |
           mkdir -p $HOME/test-reports
-          mv -R app/build/reports/tests/testDebugUnitTest/* $HOME/test-reports
+          mv app/build/reports/tests/testDebugUnitTest/* $HOME/test-reports
 
       - name: Copy Test Report HTML files to gh-pages branch
         uses: actions/checkout@v3
