--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -14,11 +14,17 @@ jobs:
       VERSION: ${{ github.event.inputs.version }}
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3.5.2
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Build APK and AAB with Gradle
         run: ./gradlew assembleRelease bundleRelease
