--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           mkdir -p docs/${{ github.run_number }}/
           cp -R $HOME/test-reports/* docs/${{ github.run_number }}/
+          echo "<a href="${{ github.run_number }}/index.html">${{ github.run_number }}</a>" >> docs/index.html
       - name: Commit and Push changes
         run: |
           git config --local user.email "action@github.com"
@@ -46,6 +47,13 @@ jobs:
           git add docs
           git commit -m "Update test report"
           git push
+      - name: Build step summary
+        run: |
+          {
+            echo "| ---------- | ----------- |"
+            echo "| report of job  | https://gaetan224.github.io/ladr-android-app/${{ github.run_number }}/  |"
+            echo "| all reports | https://gaetan224.github.io/ladr-android-app/ |"
+          } >> $GITHUB_STEP_SUMMARY
 
   build:
     needs: tests
