--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -60,7 +60,7 @@ jobs:
           aws --version
           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set default.region ${{ secrets.AWS_REGION }}
+          aws configure set default.region ${{ vars.AWS_REGION }}
 #
 #      - name: Publish apk and aab to S3
 #        run: |
